tests/errors/test-error-011.slax
version 1.1;

match / {
    <out> {
	expr "test;
    }
}

match test {
    <mumble> "test";
}
